--- a/build.yaml
+++ b/build.yaml
@@ -22,3 +22,9 @@ include:
     shield: sofle_left
   - board: nice_nano_v2
     shield: sofle_right
+  - board: nice_nano_v2
+    shield: sofle_left
+    snippet: zmk-usb-logging
+    artifact-name: sofle_left_with_logging
+  - board: nice_nano_v2
+    shield: nano_v2_settings_reset
