--- a/build.yaml
+++ b/build.yaml
@@ -27,4 +27,5 @@ include:
     snippet: zmk-usb-logging
     artifact-name: sofle_left_with_logging
   - board: nice_nano_v2
-    shield: nano_v2_settings_reset
+    shield: settings_reset
+    artifact-name: nano_v2_settings_reset
