--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -15,3 +15,10 @@ CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 # By default toggling the underglow on and off also toggles external power
 # on and off. This also causes the display to turn off.
 # CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
+
+# Experimental bluetooth config that is set to be the default eventually
+#  - attempt at making Windows pairing/connection more reliable
+CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
+
+# Enable deep sleep
+CONFIG_ZMK_SLEEP=y
