add/configure mouse scroll support, adjust encoder steps/triggers

--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -22,3 +22,7 @@ CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
 
 # Enable deep sleep
 CONFIG_ZMK_SLEEP=y
+
+# Mouse scrolling on encoder
+CONFIG_ZMK_MOUSE=y
+CONFIG_ZMK_MOUSE_SMOOTH_SCROLLING=y
