--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -24,5 +24,5 @@ CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
 CONFIG_ZMK_SLEEP=y
 
 # Mouse scrolling on encoder
-CONFIG_ZMK_MOUSE=y
-CONFIG_ZMK_MOUSE_SMOOTH_SCROLLING=y
+CONFIG_ZMK_POINTING=y
+CONFIG_ZMK_POINTING_SMOOTH_SCROLLING=y
