Work around windows battery level issue

--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -16,9 +16,14 @@ CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 # on and off. This also causes the display to turn off.
 # CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
 
-# Experimental bluetooth config that is set to be the default eventually
-#  - attempt at making Windows pairing/connection more reliable
+# Enables a combination of settings that are planned to be default in future
+# versions of ZMK to improve connection stability.
+# Currently this only disables 2M PHY support.
 CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
+
+# Low level setting for GATT subscriptions.
+# Set to n to work around an annoying Windows bug with battery notifications.
+CONFIG_BT_GATT_ENFORCE_SUBSCRIPTION=n
 
 # Enable deep sleep
 CONFIG_ZMK_SLEEP=y
