--- a/build.yaml
+++ b/build.yaml
@@ -19,11 +19,11 @@
 ---
 include:
   - board: nice_nano_v2
-    shield: sofle_left nice_view_adapter nice_view
+    shield: sofle_left nice_view_adapter nice_view_custom
   - board: nice_nano_v2
-    shield: sofle_right nice_view_adapter nice_view
+    shield: sofle_right nice_view_adapter nice_view_custom
   - board: nice_nano_v2
-    shield: sofle_left nice_view_adapter nice_view
+    shield: sofle_left nice_view_adapter nice_view_custom
     snippet: zmk-usb-logging
     artifact-name: sofle_left_with_logging
   - board: nice_nano_v2
